# package-manager-ui.rs

./: Cargo.toml  README.md
src/: main.rs
